<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            style="@style/customEditText"
            android:hint="@string/name" />

        <EditText
            style="@style/customEditText"
            android:hint="@string/id" />
        <EditText
            style="@style/customEditText"
            android:hint="@string/dob"
            />
        <EditText
            style="@style/customEditText"
            android:hint="@string/blood_group"
            />
        <EditText
            style="@style/customEditText"
            android:hint="@string/phone"
            />
        <EditText
            style="@style/customEditText"
            android:hint="@string/state"
            />
        <EditText
            style="@style/customEditText"
            android:hint="@string/district"
            />
        <EditText
            style="@style/customEditText"
            android:hint="@string/address"
            />
    </LinearLayout>

</ScrollView>